# demo_circular_buffer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  cmake-variants.yaml  switchless.sln
App/: App.cpp  App.h  App.vcxproj  App.vcxproj.filters  CMakeLists.txt
Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.h  Enclave.vcxproj  Enclave.vcxproj.filters
Include/: CMakeLists.txt  queue.h  test_queue_type.h
Interface/: CMakeLists.txt  switchless_enclave.edl
cmake/: FindMbedTLS.cmake  FindSGX.cmake  HunterGate.cmake
cmake/Hunter/: config.cmake
